caminho relativo das pastas

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
     <nav>
-      <img src="/icons/8678531_code_box_fill_icon.png" />
+      <img src="./icons/8678531_code_box_fill_icon.png" />
       <ul>
         <li><a href="#">HOME</a></li>
         <li><a href="#">ABOUT</a></li>
@@ -30,7 +30,7 @@
            desenvolvedor front-end.
         </h1>
         <div>
-          <img class="image_about" src="/img/Programming-pana.svg" alt="gift programando" />
+          <img class="image_about" src="./img/Programming-pana.svg" alt="gift programando" />
         </div>
     </section>
   </header>
@@ -38,7 +38,7 @@
     <hr class="line_two">
     <section class="about">
       <div>
-        <img src="/img/Programming-amico.svg" alt="imagem de programação">
+        <img src="./img/Programming-amico.svg" alt="imagem de programação">
      </div>
       <div class="about_two">
         <h2>Sobre mim</h2>
